# somenergia-plant-reader

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  conftest.py  env.example  example.env  pyproject.toml  pytest.ini  requirements.txt
containers/app/: Dockerfile  docker-compose.yml
containers/mkdocs/: Dockerfile  docker-compose.mkdocs.yml  example.mkdocs.env
dags/: dset_get_recent_meters_dag.py  dset_reader_dag.py  dset_reader_dag_no_wait.py  plant_reader_dag.py
docs/: dset_reader.md  index.md  modbus_reader.md  mongo_reader.md
plant_reader/: __init__.py  dset_reader.py  modbus_reader.py  utils.py
scripts/: main.py  read_dset_api.py  read_dset_meters.py
tests/: conftest.py  db_fixtures.py  test_dset_reader.py  test_dset_reader_dag.py  test_dset_reader_meters.py  test_main.py  test_plant_reader.py
