[tool.poetry]
authors = ["Equip de Dades de SomEnergia <equip.dades@somenergia.coop>"]
description = "A lightweight modbus reader for somenergia's plants"
license = "GPLv3"
name = "somenergia-modbus-reader"
packages = [{include = "plant_reader"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
httpx = "^0.24.1"
psycopg2-binary = "^2.9.5"
pymodbus = "^3.0.2"
python = ">=3.8,<3.11"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.42"
typer = {extras = ["all"], version = "^0.6.1"}
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipdb = "^0.13.9"
mkdocs-material = "^8.5.6"
pymdown-extensions = "^9.6"
pytest = "^7.1.3"
isort = "^5.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
